syntax = "proto3";

package david;

option java_multiple_files = true;
option java_package="org.david.grpc";
option java_outer_classname="auth";

service authService{
  rpc authenticateByDevice(AuthenticateByDeviceRequest) returns (AuthenticateByDeviceResponse) {}
  rpc authenticateByEmail(AuthenticateByEmailRequest) returns (AuthenticateByEmailResponse){}
}

message AuthenticateByDeviceRequest{
  string deviceId=1;
}
message AuthenticateByDeviceResponse{
  string authToken=1;
}

message AuthenticateByEmailRequest{
  string email=1;
  string password=2;
}
message AuthenticateByEmailResponse{
  string authToken=1;
}